<?xml version="1.0"?>
<package format="2">
  <name>ball_detection</name>
  <version>1.1.1</version>
  <description>The ball_detection package based on Intel RealSense D435. It implements colorful ball detection and publishing their positions relative to the observer assisted by color and depth image from an RGB-D camera. </description>

  <maintainer email="jongwon.lee@kaist.ac.kr">Jongwon Lee</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>core_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
