<?xml version="1.0"?>
<package format="2">
  <name>core_msgs</name>
  <version>0.0.0</version>
  <description>core_msgs package</description>

  <maintainer email="gilhyun.ryou@gmail.com">ghryou</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
